added examples; moved back appcache; added share buttons  to methods and properties; added 2 sponsor logo; removed who uses; added DBMON link

--- a/src/en.html
+++ b/src/en.html
@@ -1,6 +1,7 @@
 ---
 layout: main
 title: Matreshka JavaScript Framework
+description: Feel the power of accessors. The first framework which hacked JavaScript.
 lang: en
 ---
 
