--- a/src/ru.html
+++ b/src/ru.html
@@ -1,6 +1,7 @@
 ---
 layout: main
 title: Matreshka.js на русском
+description: Почувствуй силу акцессоров. Первый фреймворк, взломавший JavaScript.
 lang: ru
 ---
 
