--- a/src/forum-en.html
+++ b/src/forum-en.html
@@ -10,10 +10,18 @@
 			margin: 0;
 			padding: 0;
 		}
+
+		header {
+			max-width: 980px;
+			margin: 0 auto;
+		}
 	</style>
 	<link rel="stylesheet" href="//cdn.muut.com/1/moot.css">
 </head>
 <body>
+	<header>
+		<a href="/"><img src="img/mk5-logo_full-horiz.svg" height="60"></a>
+	</header>
 	<a class="muut" href="https://muut.com/i/matreshka-forum">Matreshka.js Forum</a>
 	<script src="//cdn.muut.com/1/moot.min.js"></script>
 	<script>
@@ -24,7 +32,6 @@
 
 	  ga('create', 'UA-12418613-4', 'auto');
 	  ga('send', 'pageview');
-
 	</script>
 </body>
 </html>
