--- a/src/forum-ru.html
+++ b/src/forum-ru.html
@@ -10,11 +10,28 @@
 			margin: 0;
 			padding: 0;
 		}
+
+		header {
+			max-width: 980px;
+			margin: 0 auto;
+		}
 	</style>
 	<link rel="stylesheet" href="//cdn.muut.com/1/moot.css">
 </head>
 <body>
+	<header>
+		<a href="/"><img src="img/mk5-logo_full-horiz.svg" height="60"></a>
+	</header>
 	<a class="muut" href="https://muut.com/i/matreshkajs-forum-ru">Форум Matreshka.js</a>
 	<script src="//cdn.muut.com/1/moot.ru.min.js"></script>
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-12418613-5', 'auto');
+	  ga('send', 'pageview');
+	</script>
 </body>
 </html>
