added supported browsers

--- a/src/en.html
+++ b/src/en.html
@@ -1,7 +1,7 @@
 ---
 layout: main
 title: Matreshka JavaScript Framework
-description: Feel the power of accessors. The first framework which hacked JavaScript.
+description: Feel the power of accessors. The first framework which is hacked JavaScript.
 lang: en
 ---
 
@@ -10,6 +10,7 @@ lang: en
 <main>
 	{% include en/promo.html %}
 	{% include en/doc_content.html %}
+	{% include en/other.html %}
 </main>
 {% include en/helpers.html %}
 <script>
