--- a/src/forum-ru.html
+++ b/src/forum-ru.html
@@ -5,22 +5,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<style>
-		html, body {
-			margin: 0;
-			padding: 0;
-		}
-
-		header {
-			max-width: 980px;
-			margin: 0 auto;
-		}
-	</style>
 	<link rel="stylesheet" href="//cdn.muut.com/1/moot.css">
+	<link rel="stylesheet" type="text/css" href="/css/forum.css">
 </head>
 <body>
 	<header>
-		<a href="/"><img src="img/mk5-logo_full-horiz.svg" height="60"></a>
+		<a href="/"><img src="/img/mk5-logo_full-horiz.svg" height="60"></a>
 	</header>
 	<a class="muut" href="https://muut.com/i/matreshkajs-forum-ru">Форум Matreshka.js</a>
 	<script src="//cdn.muut.com/1/moot.ru.min.js"></script>
