--- a/src/ru.html
+++ b/src/ru.html
@@ -10,6 +10,7 @@ lang: ru
 <main>
 	{% include ru/promo.html %}
 	{% include ru/doc_content.html %}
+	{% include ru/other.html %}
 </main>
 {% include ru/helpers.html %}
 
