clean up mess, compie html

--- a/html/en/nav.html
+++ b/html/en/nav.html
@@ -22,7 +22,9 @@
 	<label class="doc-importance">
 		<input type="checkbox"> Advanced mode  <a href="#!getting-started">(?)</a>
 	</label>
-	<div class="api">{% include en/doc_menu.html %}</div>
+	<div class="api">
+		<%- include('temp/doc_menu.html') %>
+	</div>
 	<a href="#!matreshka-magic" data-since="1.1">MatreshkaMagic</a>
 
 	<hr>
