turn on compass stuff

--- a/html/layout.html
+++ b/html/layout.html
@@ -10,7 +10,7 @@
 %>
 
 <!DOCTYPE html>
-<html manifest="matreshka.appcache?2">
+<html>
 
 	<head>
 		<title><%= page.title %></title>
@@ -111,7 +111,5 @@
 				<a class="next-page"></a>
 			</div>
 		</script>
-		<script src="js/browser-polyfill.js"></script>
-		<script src="js/app.min.js?1"></script>
 	</body>
 </html>
