--- a/jsdoc-template/tmpl/example.html
+++ b/jsdoc-template/tmpl/example.html
@@ -1,2 +1,2 @@
 <h5><?js= obj.header ?></h5>
-<pre class="prettyprint source lang-js"><code><?js= obj.code ?></code></pre>
+<pre><code class="lang-js"><?js= obj.code ?></code></pre>
