--- a/jsdoc-template/tmpl/props.html
+++ b/jsdoc-template/tmpl/props.html
@@ -1,6 +1,4 @@
-<?js if( obj.length ) { 
-	
-?>
+<?js if( obj.length ) { ?>
 	<h4><?js= this.lang.properties ?></h4>
 	<table class="properties">
 		<thead>
@@ -11,7 +9,7 @@
 			</tr>
 		</thead>
 		<tbody>
-			<?js obj.forEach( function( prop ) { ?> 
+			<?js obj.forEach( function( prop ) { ?>
 				<tr>
 					<td>
 						<?js= prop.name ?>
