--- a/html/en/other.html
+++ b/html/en/other.html
@@ -1,7 +1,7 @@
 <section class="other">
     <article id="!caniuse">
         <h2><a href="#!caniuse">Supported browsers</a></h2>
-        {% include caniuse.html %}
+        <%- include('../caniuse.html') %>
         <ul class="legend">
             <li><span class="yep"></span> All tests are passed.
             <li><span class="na"></span> Unknown. Matreshka have not been tested in these browsers.
