--- a/html/ru/other.html
+++ b/html/ru/other.html
@@ -1,7 +1,7 @@
 <section class="other">
     <article id="!caniuse">
         <h2><a href="#!caniuse">Поддержка браузерами</a></h2>
-        {% include caniuse.html %}
+        <%- include('../caniuse.html') %>
         <ul class="legend">
             <li><span class="yep"></span> Тесты прошли успешно.
             <li><span class="na"></span> Нет данных. Матрешка в этих браузерах не проверялась.
