made docs for MK#calc, started docs for MK#bindNode, improved doc compiler

--- a/jsdoc-template/tmpl/example.html
+++ b/jsdoc-template/tmpl/example.html
@@ -1,2 +1,4 @@
-<h5><?js= obj.header ?></h5>
+<?js if(obj.header) { ?>
+    <h4><?js= obj.header ?></h4>
+<?js } ?>
 <pre><code class="lang-js"><?js= obj.code ?></code></pre>
