--- a/jsdoc-template/tmpl/examples.html
+++ b/jsdoc-template/tmpl/examples.html
@@ -1,4 +1,7 @@
-<?js if( obj.length ) { ?> 
-	<h4><?js= this.lang.examples ?></h4>
-<?js } ?>  
-<?js obj.forEach( function( example ) {  print( this.partial( 'example.html', example ) ) }, this ); ?>
+<?js if( obj.length ) { ?>
+	<h3><?js= this.lang.examples ?></h3>
+<?js } ?>
+<?js obj.forEach( function( example ) {
+	print( this.partial( 'example.html', example ) ) }, this );
+?>
+ 
