--- a/jsdoc-template/tmpl/property.html
+++ b/jsdoc-template/tmpl/property.html
@@ -1,5 +1,5 @@
 <?js var link = obj.longname.replace( '#', '-' ); ?>
-<article class="item property" id="!<?js= link ?>" <?js if(obj.since) {?>data-since="<?js= obj.since ?>"<?js } ?>
+<article class="item property" id="!<?js= link ?>"
 <?js if(obj.importance) {?>data-importance="<?js= obj.importance ?>"<?js } ?>>
 	<h2>
 		<a href="#!<?js= link ?>">
