--- a/jsdoc-template/tmpl/method.html
+++ b/jsdoc-template/tmpl/method.html
@@ -13,6 +13,11 @@
 				<?js } else { ?>()<?js } ?>
 		</a> <?js= obj.returns ? '<span class="returns">→ ' + this.partial( 'params.html', obj.returns[0] ) + '</span>' : '' ?>
 	</h2>
+	<?js if( obj.synonym ) { ?>
+	<p>
+		<?js= this.lang.synonym + ': ' + obj.synonym ?>
+	</p>
+	<?js } ?>
 	<div class="summary"><?js= obj.summary ?></div>
 	<div class="description"><?js= obj.description ?></div>
 	<?js if( obj.returns ) { ?>
