--- a/jsdoc-template/tmpl/method.html
+++ b/jsdoc-template/tmpl/method.html
@@ -18,6 +18,11 @@
 		<?js= this.lang.synonym + ': ' + obj.synonym ?>
 	</p>
 	<?js } ?>
+	<?js if(obj.module) { ?>
+	<p class="module">
+		<?js= this.lang.module ?>: <code>'<?js= obj.module ?>'</code>
+	</p>
+	<?js } ?>
 	<div class="summary"><?js= obj.summary ?></div>
 	<div class="description"><?js= obj.description ?></div>
 	<?js if( obj.returns ) { ?>
