--- a/jsdoc-template/tmpl/ns.html
+++ b/jsdoc-template/tmpl/ns.html
@@ -4,6 +4,11 @@
 			<?js= '<span class="memberof">' + obj.memberof + '.</span>' + obj.name ?> <span data-type="object">object</span>
 		</a>
 	</h2>
+	<?js if(obj.module) { ?>
+	<p class="module">
+		<?js= this.lang.module ?>: <code>'<?js= obj.module ?>'</code>
+	</p>
+	<?js } ?>
 	<div class="summary"><?js= obj.summary ?></div>
 	<div class="description"><?js= obj.description ?></div>
 	<?js print( this.partial( 'see.html', obj.see ) ) ?>
