add patch link to articles

--- a/jsdoc-template/tmpl/comments.html
+++ b/jsdoc-template/tmpl/comments.html
@@ -1,7 +1,4 @@
-<div class="share-buttons">
-    <a class="share-facebook"></a> <a class="share-twitter"></a>
-</div>
-
+<a class="make-patch-link" target="_blank" href="<?js= obj.githubSourceLink ?>"><?js= this.lang.patchLinkText ?></a>
 
 <a class="comments" data-id="<?js= obj.link ?>" data-title="<?js= obj.title ?>"><?js= this.lang.comments ?><i></i></a>
 <!--<div class="comments-container"></div>-->
