--- a/jsdoc-template/tmpl/property.html
+++ b/jsdoc-template/tmpl/property.html
@@ -25,5 +25,8 @@
 	<div class="description"><?js= obj.description ?></div>
 	<?js print( this.partial( 'see.html', obj.see ) ) ?>
 	<?js print( this.partial( 'examples.html', obj.examples ) ) ?>
-	<?js print( this.partial( 'comments.html', { link: link, title: this.lang.property + ' ' + link }) ) ?>
+	<?js print( this.partial( 'comments.html', Object.assign({
+		link: link,
+		title: this.lang.property + ' ' + link
+	}, obj))) ?>
 </article>
