--- a/html/en/nav.html
+++ b/html/en/nav.html
@@ -40,5 +40,5 @@
 	<span class="nav-heading">Links</span>
 	<a href="https://github.com/finom/matreshka/releases">What's new?</a>
 	<a href="//ru.matreshka.io" class="another-language"><i></i> In Russian</a>
-	<a>Updated at {{site.time | date: "%Y-%m-%d" }}</a>
+	<a>Last update <%= updatedDate %></a>
 </nav>
