--- a/html/ru/nav.html
+++ b/html/ru/nav.html
@@ -39,5 +39,5 @@
 	<hr>
 	<span class="nav-heading">Ссылки</span>
 	<a href="//matreshka.io" class="another-language"><i></i> English version</a>
-	<a>Обновлено {{site.time | date: "%Y-%m-%d" }}</a>
+	<a>Обновлено <%= updatedDate %></a>
 </nav>
