new text for intro etc, removed unused things, added donate button ...

--- a/html/body.html
+++ b/html/body.html
@@ -6,21 +6,17 @@
 		<article id="!introduction">
 			<%- include('introduction.md') %>
 		</article>
-		<article id="!getting-started">
-			<%- include('getting-started.md') %>
-		</article>
-		<article id="!hello-world">
-			<%- include('hello-world.md') %>
-		</article>
-		<article id="!how-to-include">
-			<%- include('how-to-include.md') %>
+		<article id="!website-instructions">
+			<%- include('website-instructions.md') %>
 		</article>
 		<article id="!examples">
 			<%- include('examples.md') %>
 		</article>
+		<article id="!donate">
+			<%- include('donate.md') %>
+		</article>
 	</section>
 	<%- include('temp/doc_content.html') %>
-	<%- include('other.html') %>
 </main>
 <%- include('helpers.html') %>
 <script>
