--- a/html/en/nav.html
+++ b/html/en/nav.html
@@ -8,14 +8,9 @@
 	<span class="nav-heading">Start</span>
 	<a href="#!home">Home</a>
 	<a href="#!introduction">Introduction</a>
-	<a href="#!getting-started">Getting started <span class="expand"></span><span class="hidden-active-child"></span></a>
-	<div class="submenu-wrapper">
-		<ul data-submenu="!getting-started">
-			<li><a href="#!hello-world">Hello World</a>
-			<li><a href="#!examples">Examples</a>
-			<li><a href="#!how-to-include">How to include</a>
-		</ul>
-	</div>
+	<a href="#!website-instructions">Website instructions</a>
+	<a href="#!examples">Examples</a>
+	<a href="#!donate">Donate</a>
 
 	<hr>
 	<span class="nav-heading">API</span>
