--- a/html/ru/nav.html
+++ b/html/ru/nav.html
@@ -8,14 +8,9 @@
 	<span class="nav-heading">Старт</span>
 	<a href="#!home">Главная</a>
 	<a href="#!introduction">Введение</a>
-	<a href="#!getting-started">С чего начать? <span class="expand"></span><span class="hidden-active-child"></span></a>
-	<div class="submenu-wrapper">
-		<ul data-submenu="!getting-started">
-			<li><a href="#!hello-world">Hello World</a>
-			<li><a href="#!examples">Примеры</a>
-			<li><a href="#!how-to-include">Как подключить</a>
-		</ul>
-	</div>
+	<a href="#!website-instructions">О документации</a>
+	<a href="#!examples">Examples</a>
+	<a href="#!donate">Donate</a>
 
 	<hr>
 	<span class="nav-heading">API</span>
