rus faq and other minor things

--- a/html/body.html
+++ b/html/body.html
@@ -17,6 +17,12 @@
 		</article>
 	</section>
 	<%- include('temp/doc_content.html') %>
+	<section>
+		<article id="!faq">
+			<%- include('faq.md') %>
+		</article>
+	</section>
+
 </main>
 <%- include('helpers.html') %>
 <script>
