minor changes in docs

--- a/html/ru/nav.html
+++ b/html/ru/nav.html
@@ -9,7 +9,7 @@
 	<a href="#!home">Главная</a>
 	<a href="#!introduction">Введение</a>
 	<a href="#!website-instructions">О документации</a>
-	<a href="#!examples">Examples</a>
+	<a href="#!examples">Примеры</a>
 	<a href="#!donate">Donate</a>
 
 	<hr>
@@ -23,8 +23,6 @@
 	<hr>
 	<span class="nav-heading">Информация</span>
 	<a href="#!faq">FAQ</a>
-	<a href="#!caniuse">Поддержка браузерами</a>
-
 	<hr>
 	<span class="nav-heading">Статьи</span>
 	<a href="http://habrahabr.ru/company/matreshka/blog/254889/">Туториал</a>
