minor changes at rus version

--- a/html/ru/promo.html
+++ b/html/ru/promo.html
@@ -2,7 +2,7 @@
 	<article id="!home">
 		<img src="img/mk5-logo_matreshka.svg" class="mk-logo-matreshka">
 		<img src="img/mk5-logo_text.svg" class="mk-logo-text">
-		<span class="version">v{{ site.data.package.version }}</span>
+		<!--<span class="version">vX</span>-->
 		<div class="demo">
 			<output class="out">Самый простой фреймворк во Вселенной</output>
 			<input type="text" class="in">
