--- a/html/en/nav.html
+++ b/html/en/nav.html
@@ -15,7 +15,7 @@
 	<hr>
 	<span class="nav-heading">API</span>
 	<label class="doc-importance">
-		<input type="checkbox"> Advanced mode  <a href="#!getting-started">(?)</a>
+		<input type="checkbox"> Advanced mode  <a href="#!website-instructions">(?)</a>
 	</label>
 	<div class="api">
 		<%- include('temp/doc_menu.html') %>
@@ -23,17 +23,11 @@
 	<hr>
 	<span class="nav-heading">Info</span>
 	<a href="#!faq">FAQ</a>
-	<a href="#!caniuse">Supported browsers</a>
-
 	<hr>
-	<span class="nav-heading">Articles</span>
+	<span class="nav-heading">Links</span>
 	<a href="https://github.com/matreshkajs/matreshka/wiki/Matreshka.js:-From-simple-to-simple">Tutorial</a>
 	<a href="https://github.com/matreshkajs/matreshka/wiki/10-reasons-to-try-Matreshka">10 reasons to try</a>
 	<a href="https://github.com/matreshkajs/matreshka/wiki/Matreshka.js:-Events">Events</a>
-
-	<hr>
-	<span class="nav-heading">Links</span>
-	<a href="https://github.com/finom/matreshka/releases">What's new?</a>
 	<a href="//ru.matreshka.io" class="another-language"><i></i> In Russian</a>
 	<a>Last update <%= updatedDate %></a>
 </nav>
