--- a/html/en/promo.html
+++ b/html/en/promo.html
@@ -2,7 +2,7 @@
 	<article id="!home">
 		<img src="img/mk5-logo_matreshka.svg" class="mk-logo-matreshka">
 		<img src="img/mk5-logo_text.svg" class="mk-logo-text">
-		<span class="version">v{{ site.data.package.version }}</span>
+		<span class="version">2</span>
 		<div class="demo">
 			<output class="out">The easiest framework in the Universe</output>
 			<input type="text" class="in">
@@ -17,7 +17,7 @@ app.x = 'The easiest framework in the Universe';
 &lt;/script&gt;</code></pre>
 		</div>
 		<p>
-			<a href="https://github.com/finom/matreshka/archive/v{{ site.data.package.version }}.zip" download class="download-btn">Download <i></i></a>
+			<a href="https://github.com/matreshkajs/matreshka/archive/gh-pages.zip" download="matreshkajs.zip" class="download-btn">Download <i></i></a>
 			<a href="https://github.com/finom/matreshka" class="github-btn">Github <i></i></a>
 		</p>
 
@@ -29,11 +29,8 @@ app.x = 'The easiest framework in the Universe';
 		</div>
 
 		<div class="sponsors">
-			<h3>Who's helping to the project?</h3>
-			<div class="main-sponsor">
-				The main sponsor<br>
-			    <a href="http://shooju.com" target="_blank"><img src="img/logos/shooju.png"></a>
-			</div>
+			<h3>Some logos</h3>
+			<a href="http://shooju.com" target="_blank"><img src="img/logos/shooju.png"></a>
 			<a href="http://habrahabr.ru/company/matreshka/"><img src="img/logos/habrahabr.svg" height="70"></a>
 			<a href="https://www.browserstack.com/"><img src="img/logos/browserstack.svg" height="60"></a>
 		</div>
