--- a/html/ru/nav.html
+++ b/html/ru/nav.html
@@ -15,7 +15,7 @@
 	<hr>
 	<span class="nav-heading">API</span>
 	<label class="doc-importance">
-		<input type="checkbox"> Продвинутый режим <a href="#!getting-started">(?)</a>
+		<input type="checkbox"> Продвинутый режим <a href="#!website-instructions">(?)</a>
 	</label>
 	<div class="api">
 		<%- include('temp/doc_menu.html') %>
@@ -24,13 +24,10 @@
 	<span class="nav-heading">Информация</span>
 	<a href="#!faq">FAQ</a>
 	<hr>
-	<span class="nav-heading">Статьи</span>
+	<span class="nav-heading">Ссылки</span>
 	<a href="http://habrahabr.ru/company/matreshka/blog/254889/">Туториал</a>
 	<a href="http://habrahabr.ru/company/matreshka/blog/254927/">10 причин попробовать</a>
 	<a href="http://habrahabr.ru/company/matreshka/blog/267513/">События</a>
-
-	<hr>
-	<span class="nav-heading">Ссылки</span>
 	<a href="//matreshka.io" class="another-language"><i></i> English version</a>
 	<a>Обновлено <%= updatedDate %></a>
 </nav>
