--- a/html/ru/promo.html
+++ b/html/ru/promo.html
@@ -2,7 +2,7 @@
 	<article id="!home">
 		<img src="img/mk5-logo_matreshka.svg" class="mk-logo-matreshka">
 		<img src="img/mk5-logo_text.svg" class="mk-logo-text">
-		<!--<span class="version">vX</span>-->
+		<span class="version">2</span>
 		<div class="demo">
 			<output class="out">Самый простой фреймворк во Вселенной</output>
 			<input type="text" class="in">
@@ -18,7 +18,7 @@ app.x = 'Самый простой фреймворк во Вселенной';
 		</div>
 
 		<p>
-			<a href="https://github.com/finom/matreshka/archive/v{{ site.data.package.version }}.zip" download class="download-btn">Скачать <i></i></a>
+			<a href="https://github.com/matreshkajs/matreshka/archive/gh-pages.zip" download="matreshkajs.zip" class="download-btn">Скачать <i></i></a>
 			<a href="https://github.com/finom/matreshka" class="github-btn">Github <i></i></a>
 		</p>
 
@@ -31,11 +31,8 @@ app.x = 'Самый простой фреймворк во Вселенной';
 		</div>
 
 		<div class="sponsors">
-			<h3>Кто помогает проекту?</h3>
-			<div class="main-sponsor">
-				Главный спонсор<br>
-			    <a href="http://shooju.com" target="_blank"><img src="img/logos/shooju.png"></a>
-			</div>
+			<h3>Немного логотипов</h3>
+			<a href="http://shooju.com" target="_blank"><img src="img/logos/shooju.png"></a>
 			<a href="http://habrahabr.ru/company/matreshka/"><img src="img/logos/habrahabr.svg" height="70"></a>
 			<a href="https://www.browserstack.com/"><img src="img/logos/browserstack.svg" height="60"></a>
 		</div>
