change link at nav

--- a/html/en/nav.html
+++ b/html/en/nav.html
@@ -28,6 +28,6 @@
 	<a href="https://github.com/matreshkajs/matreshka/wiki/Matreshka.js:-From-simple-to-simple">Tutorial</a>
 	<a href="https://github.com/matreshkajs/matreshka/wiki/10-reasons-to-try-Matreshka">10 reasons to try</a>
 	<a href="https://github.com/matreshkajs/matreshka/wiki/Matreshka.js:-Events">Events</a>
-	<a href="//ru.matreshka.io" class="another-language"><i></i> In Russian</a>
+	<a href="//ru.matreshka.io/v2" class="another-language"><i></i> In Russian</a>
 	<a>Last update <%= updatedDate %></a>
 </nav>
