--- a/html/ru/nav.html
+++ b/html/ru/nav.html
@@ -28,6 +28,6 @@
 	<a href="http://habrahabr.ru/company/matreshka/blog/254889/">Туториал</a>
 	<a href="http://habrahabr.ru/company/matreshka/blog/254927/">10 причин попробовать</a>
 	<a href="http://habrahabr.ru/company/matreshka/blog/267513/">События</a>
-	<a href="//matreshka.io" class="another-language"><i></i> English version</a>
+	<a href="//matreshka.io/v2" class="another-language"><i></i> English version</a>
 	<a>Обновлено <%= updatedDate %></a>
 </nav>
