change links to todomvc example

--- a/static/index.ru.html
+++ b/static/index.ru.html
@@ -2315,7 +2315,7 @@ var app = new Application();</code></pre><p><strong>3.</strong> Это всё!</
 <pre class="prettyprint source lang-js"><code>require(['path/to/matreshka'], function(Matreshka) {
     //...
 });</code></pre><p>Импорт в стиле ECMAScript 2015</p>
-<pre class="prettyprint source lang-js"><code>import Matreshka from 'path/to/matreshka';</code></pre></article><article id="!examples"><h2><a href="#!examples">Примеры</a></h2><p><span class="list-item-number">1.</span> <a href="//gh-embed.matreshka.io/v0/finom/matreshka_todomvc_ru/?ref=gh-pages">TodoMVC</a> - список дел. (<a href="//finom.github.io/matreshka_todomvc_ru/docs/app.html">Исходный код с аннотациями</a>)</p>
+<pre class="prettyprint source lang-js"><code>import Matreshka from 'path/to/matreshka';</code></pre></article><article id="!examples"><h2><a href="#!examples">Примеры</a></h2><p><span class="list-item-number">1.</span> <a href="//gh-embed.matreshka.io/v0/matreshkajs/matreshka_todomvc/?ref=gh-pages">TodoMVC</a> - список дел. (<a href="//matreshkajs.github.io/matreshka_todomvc/docs/app.html">Исходный код с аннотациями</a>)</p>
 <p><span class="list-item-number">2.</span> <a href="//gh-embed.matreshka.io/v0/matreshkajs/matreshka_examples/treeview/?ref=gh-pages">TreeView</a> - древовидный список неограниченной вложенности.</p>
 <p><span class="list-item-number">3.</span> <a href="//gh-embed.matreshka.io/v0/matreshkajs/matreshka_examples/markdown_editor/?ref=gh-pages">Markdown editor</a> - простейший редактор Markdown (13 строк кода).</p>
 <p><span class="list-item-number">4.</span> <a href="//gh-embed.matreshka.io/v0/matreshkajs/matreshka_examples/soundcloud_search/?ref=gh-pages">Simple SoundCloud player</a> - поиск музыки, использующий SoundCloud API.</p></article>
