--- a/html/layout.html
+++ b/html/layout.html
@@ -78,13 +78,35 @@
 			}
 		</style>
 		<script>
-		if ('serviceWorker' in navigator) {
-			navigator.serviceWorker.register('sw.js').then(function() {
-				console.log('CLIENT: service worker registration complete.');
-			}, function() {
-				console.error(e);
+		(function() {
+			function registerServiceWorker() {
+				return navigator.serviceWorker.register('sw.js').then(function() {
+					console.log('CLIENT: service worker registration complete.');
+				}, function() {
+					console.error(e);
+				});
+			}
+
+			fetch('sw.js').then(function(resp) {
+				return resp.text();
+			}).then(function(swText) {
+				if(localStorage.serviceWorkerScriptText !== swText) {
+					navigator.serviceWorker.getRegistrations().then(function(registrations) {
+						Promise.all(
+							registrations.map(function(registration) {
+								return registration.unregister();
+							})
+						).then(function() {
+							location.reload();
+						});
+					});
+
+					localStorage.serviceWorkerScriptText = swText;
+				} else {
+					registerServiceWorker();
+				}
 			});
-		}
+		})();
 		</script>
 	</head>
 	<body>
