--- a/html/layout.html
+++ b/html/layout.html
@@ -82,7 +82,7 @@
 			function registerServiceWorker() {
 				return navigator.serviceWorker.register('sw.js').then(function() {
 					console.log('CLIENT: service worker registration complete.');
-				}, function() {
+				}, function(e) {
 					console.error(e);
 				});
 			}
