ua translation for some of HTML stuff, minor fixes at other languages

--- a/html/ua/helpers.html
+++ b/html/ua/helpers.html
@@ -1,17 +1,17 @@
 <div class="typo-badge">
 	<span class="close" title="Больше не показывать"></span>
-	Нашли опечатку или ошибку? <br> Выберите текст и нажмите <br>
+	Знайшли помилку в тексті? <br> Виберіть його і натисніть <br>
 	<button>CTRL</button>+<button>Enter</button>
 </div>
 <form class="typo" method="POST" target="typo-iframe">
 	<i class="close-modal"></i>
-	<h5>Ошибка на сайте</h5>
+	<h5>Помилка на сайті</h5>
 	<p class="selection"></p>
-	<textarea class="comment" rows="2" placeholder="Комментарий (не обязательно)"></textarea>
+	<textarea class="comment" rows="2" placeholder="Коментар (не обов'язково)"></textarea>
 	<input type="hidden" class="page">
 	<input type="hidden" class="selection">
 	<div class="action-bar">
-		<button type="submit">Отправить</button>
-		<button class="cancel">Отменить</button>
+		<button type="submit">Відправити</button>
+		<button class="cancel">Скасувати</button>
 	</div>
 </form>
