add other languages link

--- a/html/en/nav.html
+++ b/html/en/nav.html
@@ -24,6 +24,10 @@
 	<span class="nav-heading">Links</span>
 	<a href="https://github.com/matreshkajs/matreshka/wiki/Matreshka.js:-From-simple-to-simple">Tutorial</a>
 	<a href="https://github.com/matreshkajs/matreshka/wiki/Matreshka.js:-Events">Events</a>
-	<a href="//ru.matreshka.io/v2" class="another-language"><i></i> In Russian</a>
+	<a href="/v1">Matreshka 1</a>
+	
+	<span class="nav-heading">Other languages</span>
+	<a href="//ua.matreshka.io/"><i></i> Українською</a>
+	<a href="//ru.matreshka.io/"><i></i> На русском</a>
 	<a>Last update <%= updatedDate %></a>
 </nav>
