--- a/html/ru/nav.html
+++ b/html/ru/nav.html
@@ -24,6 +24,10 @@
 	<span class="nav-heading">Ссылки</span>
 	<a href="http://habrahabr.ru/company/matreshka/blog/254889/">Туториал</a>
 	<a href="http://habrahabr.ru/company/matreshka/blog/267513/">События</a>
-	<a href="//matreshka.io/v2" class="another-language"><i></i> English version</a>
+	<a href="/v1">Matreshka 1</a>
+
+	<span class="nav-heading">Другие языки</span>
+	<a href="//ua.matreshka.io/"><i></i> Українською</a>
+	<a href="//matreshka.io/"><i></i> In English</a>
 	<a>Обновлено <%= updatedDate %></a>
 </nav>
