--- a/html/ua/nav.html
+++ b/html/ua/nav.html
@@ -24,6 +24,11 @@
 	<span class="nav-heading">Посилання</span>
 	<a href="https://github.com/matreshkajs/matreshka/wiki/Matreshka.js:-From-simple-to-simple">Tutorial</a>
 	<a href="https://github.com/matreshkajs/matreshka/wiki/Matreshka.js:-Events">Events</a>
-	<a href="//matreshka.io/v2" class="another-language"><i></i> English version</a>
+	<a href="/v1">Matreshka 1</a>
+
+	<span class="nav-heading">Інщі мови</span>
+	<a href="//matreshka.io/"><i></i> In English</a>
+	<a href="//ru.matreshka.io/"><i></i> На русском</a>
+
 	<a>Оновлено <%= updatedDate %></a>
 </nav>
