move back another-language class

--- a/html/en/nav.html
+++ b/html/en/nav.html
@@ -25,9 +25,9 @@
 	<a href="https://github.com/matreshkajs/matreshka/wiki/Matreshka.js:-From-simple-to-simple">Tutorial</a>
 	<a href="https://github.com/matreshkajs/matreshka/wiki/Matreshka.js:-Events">Events</a>
 	<a href="/v1">Matreshka 1</a>
-	
+
 	<span class="nav-heading">Other languages</span>
-	<a href="//ua.matreshka.io/"><i></i> Українською</a>
-	<a href="//ru.matreshka.io/"><i></i> На русском</a>
+	<a href="//ua.matreshka.io/" class="another-language"><i></i> Українською</a>
+	<a href="//ru.matreshka.io/" class="another-language"><i></i> На русском</a>
 	<a>Last update <%= updatedDate %></a>
 </nav>
