--- a/html/ru/nav.html
+++ b/html/ru/nav.html
@@ -27,7 +27,7 @@
 	<a href="/v1">Matreshka 1</a>
 
 	<span class="nav-heading">Другие языки</span>
-	<a href="//ua.matreshka.io/"><i></i> Українською</a>
-	<a href="//matreshka.io/"><i></i> In English</a>
+	<a href="//ua.matreshka.io/" class="another-language"><i></i> Українською</a>
+	<a href="//matreshka.io/" class="another-language"><i></i> In English</a>
 	<a>Обновлено <%= updatedDate %></a>
 </nav>
