--- a/html/ua/nav.html
+++ b/html/ua/nav.html
@@ -27,8 +27,8 @@
 	<a href="/v1">Matreshka 1</a>
 
 	<span class="nav-heading">Інщі мови</span>
-	<a href="//matreshka.io/"><i></i> In English</a>
-	<a href="//ru.matreshka.io/"><i></i> На русском</a>
+	<a href="//matreshka.io/" class="another-language"><i></i> In English</a>
+	<a href="//ru.matreshka.io/" class="another-language"><i></i> На русском</a>
 
 	<a>Оновлено <%= updatedDate %></a>
 </nav>
