change manifest path

--- a/html/layout.html
+++ b/html/layout.html
@@ -42,7 +42,7 @@
 		<link rel="icon" type="image/png" href="icons/favicon-96x96.png" sizes="96x96">
 		<link rel="icon" type="image/png" href="icons/android-chrome-192x192.png" sizes="192x192">
 		<link rel="icon" type="image/png" href="icons/favicon-16x16.png" sizes="16x16">
-		<link rel="manifest" href="icons/android-chrome-manifest.json">
+		<link rel="manifest" href="icons/manifest.json">
 		<link rel="shortcut icon" href="icons/favicon.ico">
 		<link rel="dns-prefetch" href="//google-analytics.com/">
 		<meta name="apple-mobile-web-app-title" content="{{ page.title }}">
