add Patreon link, update Donate section, remove all sponsors

--- a/html/ru/promo.html
+++ b/html/ru/promo.html
@@ -24,15 +24,12 @@ app.x = 'Самый простой фреймворк во Вселенной';
 
 		<div class="social">
 			<a href="https://twitter.com/matreshkajs" class="social-twitter">matreshkajs</a>
-			<a href="http://ru.matreshka.io/forum" class="social-forum">Форум</a>
+			<a href="https://ru.matreshka.io/forum" class="social-forum">Форум</a>
 			<a href="https://gitter.im/matreshkajs/matreshka/ru" class="social-gitter">Чат в Gitter</a>
 		</div>
 
-		<div class="sponsors">
+		<div class="sponsors hide">
 			<h3>Немного логотипов</h3>
-			<a href="http://shooju.com" target="_blank"><img src="img/logos/shooju.png"></a>
-			<a href="http://habrahabr.ru/company/matreshka/"><img src="img/logos/habrahabr.svg" height="70"></a>
-			<a href="https://www.browserstack.com/"><img src="img/logos/browserstack.svg" height="60"></a>
 		</div>
 	</article>
 </section>
