--- a/html/ua/promo.html
+++ b/html/ua/promo.html
@@ -24,15 +24,12 @@ app.x = 'Найпростіший фреймворк у Всесвіті';
 
 		<div class="social">
 			<a href="https://twitter.com/matreshkajs" class="social-twitter">matreshkajs</a>
-			<a href="http://ua.matreshka.io/forum" class="social-forum">Форум</a>
+			<a href="https://ua.matreshka.io/forum" class="social-forum">Форум</a>
 			<a href="https://gitter.im/matreshkajs/ua" class="social-gitter">Чат в Gitter</a>
 		</div>
 
-		<div class="sponsors">
-			<h3>Трохи логотипів</h3>
-			<a href="http://shooju.com" target="_blank"><img src="img/logos/shooju.png"></a>
-			<a href="http://habrahabr.ru/company/matreshka/"><img src="img/logos/habrahabr.svg" height="70"></a>
-			<a href="https://www.browserstack.com/"><img src="img/logos/browserstack.svg" height="60"></a>
+		<div class="sponsors hide">
+			<h3>Спонсори</h3>
 		</div>
 	</article>
 </section>
