--- a/html/en/promo.html
+++ b/html/en/promo.html
@@ -23,15 +23,12 @@ app.x = 'The easiest framework in the Universe';
 
 		<div class="social">
 			<a href="https://twitter.com/matreshkajs" class="social-twitter">matreshkajs</a>
-			<a href="http://matreshka.io/forum" class="social-forum">Forum</a>
+			<a href="https://matreshka.io/forum" class="social-forum">Forum</a>
 			<a href="https://gitter.im/matreshkajs/matreshka" class="social-gitter">Chat on Gitter</a>
 		</div>
 
-		<div class="sponsors">
+		<div class="sponsors hide">
 			<h3>Some logos</h3>
-			<a href="http://shooju.com" target="_blank"><img src="img/logos/shooju.png"></a>
-			<a href="http://habrahabr.ru/company/matreshka/"><img src="img/logos/habrahabr.svg" height="70"></a>
-			<a href="https://www.browserstack.com/"><img src="img/logos/browserstack.svg" height="60"></a>
 		</div>
 	</article>
 </section>
