--- a/html/ru/nav.html
+++ b/html/ru/nav.html
@@ -2,6 +2,10 @@
 	<span class="view-switcher">
 		<span data-value="all" class="checked">Всё сразу</span><span data-value="per-one">По одному</span>
 	</span>
+	<a class="patreon-support" href="https://www.patreon.com/finom">Matreshka.js на Patreon</a>
+	<a class="patreon-backed" href="https://www.patreon.com/finom">
+		Patreon: <strong>$<span class="patreon-sum"></span></strong> из $<span class="patreon-goal"></span>
+	</a>
 	<span class="nav-heading">Старт</span>
 	<a href="#!home">Главная</a>
 	<a href="#!introduction">Введение</a>
