add soma links to nav

--- a/html/en/nav.html
+++ b/html/en/nav.html
@@ -27,9 +27,7 @@
 	<a href="#!faq">FAQ</a>
 	<hr>
 	<span class="nav-heading">Links</span>
-	<a href="https://github.com/matreshkajs/matreshka/wiki/Matreshka.js:-From-simple-to-simple">Tutorial</a>
-	<a href="https://github.com/matreshkajs/matreshka/wiki/Matreshka.js:-Events">Events</a>
-	<a href="/v1">Matreshka 1</a>
+	<%- include('../common/links.html') %>
 
 	<span class="nav-heading">Other languages</span>
 	<a href="//ua.matreshka.io/" class="another-language"><i></i> Українською</a>
