--- a/html/ua/nav.html
+++ b/html/ua/nav.html
@@ -26,9 +26,7 @@
 	<a href="#!faq">FAQ</a>
 	<hr>
 	<span class="nav-heading">Посилання</span>
-	<a href="https://github.com/matreshkajs/matreshka/wiki/Matreshka.js:-From-simple-to-simple">Tutorial</a>
-	<a href="https://github.com/matreshkajs/matreshka/wiki/Matreshka.js:-Events">Events</a>
-	<a href="/v1">Matreshka 1</a>
+	<%- include('../common/links.html') %>
 
 	<span class="nav-heading">Інщі мови</span>
 	<a href="//matreshka.io/" class="another-language"><i></i> In English</a>
