--- a/html/ru/nav.html
+++ b/html/ru/nav.html
@@ -26,9 +26,9 @@
 	<a href="#!faq">FAQ</a>
 	<hr>
 	<span class="nav-heading">Ссылки</span>
-	<a href="http://habrahabr.ru/company/matreshka/blog/254889/">Туториал</a>
+	<%- include('../common/links.html') %>
+	<a href="http://habrahabr.ru/company/matreshka/blog/254889/">От простого к простому</a>
 	<a href="http://habrahabr.ru/company/matreshka/blog/267513/">События</a>
-	<a href="/v1">Matreshka 1</a>
 
 	<span class="nav-heading">Другие языки</span>
 	<a href="//ua.matreshka.io/" class="another-language"><i></i> Українською</a>
