--- a/html/ru/nav.html
+++ b/html/ru/nav.html
@@ -29,6 +29,7 @@
 	<%- include('../common/links.html') %>
 	<a href="http://habrahabr.ru/company/matreshka/blog/254889/">От простого к простому</a>
 	<a href="http://habrahabr.ru/company/matreshka/blog/267513/">События</a>
+	<a href="https://habrahabr.ru/company/matreshka/blog/277171/">Роутер</a>
 
 	<span class="nav-heading">Другие языки</span>
 	<a href="//ua.matreshka.io/" class="another-language"><i></i> Українською</a>
